fix positioning of connect button on iphone part 4

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -259,6 +259,7 @@ body {
   a#connect {
     padding-top: 7px;
     padding-right: 20px;
+    padding-left: 20px;
     padding-bottom: 11px;
     margin-bottom: 11px;
     text-align: center;
